Feat extend identification configuration (#203)
* chore: fix javadoc and minor java syntax

* feat: add new identification configuration and rework identificationState

* fix: identification DTO attribute without _underscores_, questions with _underscore_

* feat: multiple identification DB and DTO, managed by campaign configuration

* test: cucumber first step

* test: remove unused code

* feat: prevent updating campaign identificationConfiguration