@@ -18,7 +18,6 @@ import fr.insee.pearljam.api.dto.surveyunit.SurveyUnitContextDto;
 import fr.insee.pearljam.api.dto.surveyunit.SurveyUnitInterviewerLinkDto;
 import fr.insee.pearljam.api.dto.user.UserContextDto;
 import fr.insee.pearljam.api.dto.user.UserDto;
-import fr.insee.pearljam.api.exception.NotFoundException;
 import fr.insee.pearljam.api.repository.*;
 import fr.insee.pearljam.api.service.*;
 import fr.insee.pearljam.api.surveyunit.dto.CommentDto;
@@ -80,7 +79,6 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @Import(FixedDateServiceConfiguration.class)
 class TestAuthKeyCloak {
 
-	private final SurveyUnitService surveyUnitService;
 	private final UserService userService;
 	private final StateRepository stateRepository;
 	private final UserRepository userRepository;
@@ -91,7 +89,6 @@ class TestAuthKeyCloak {
 	private final OrganizationUnitRepository organizationUnitRepository;
 	private final InterviewerRepository interviewerRepository;
 	private final ClosingCauseRepository closingCauseRepository;
-	private final ReferentService referentservice;
 	private final MessageService messageService;
 	private final PreferenceService preferenceService;
 
@@ -100,14 +97,12 @@ class TestAuthKeyCloak {
 
 	private MockRestServiceServer mockServer;
 
-	static Authentication LOCAL_USER = AuthenticatedUserTestHelper.AUTH_LOCAL_USER;
-	static Authentication INTERVIEWER = AuthenticatedUserTestHelper.AUTH_INTERVIEWER;
-	static Authentication ADMIN = AuthenticatedUserTestHelper.AUTH_ADMIN;
+	private static final Authentication LOCAL_USER = AuthenticatedUserTestHelper.AUTH_LOCAL_USER;
+	private static final Authentication INTERVIEWER = AuthenticatedUserTestHelper.AUTH_INTERVIEWER;
+	private static final Authentication ADMIN = AuthenticatedUserTestHelper.AUTH_ADMIN;
 
 	/**
 	 * This method set up the dataBase content
-	 * 
-	 *
 	 */
 	@BeforeEach
 	public void setUp() {
@@ -154,14 +149,14 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the GET endpoint "api/user"
 	 * return 200
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(1)
 	void testGetUser() throws Exception {
-		mockMvc.perform(get("/api/user").accept(MediaType.APPLICATION_JSON)
-				.with(authentication(LOCAL_USER)))
+		mockMvc.perform(get(Constants.API_USER).accept(MediaType.APPLICATION_JSON)
+						.with(authentication(LOCAL_USER)))
 				.andDo(print())
 				.andExpectAll(
 						status().isOk(),
@@ -179,8 +174,8 @@ class TestAuthKeyCloak {
 	void testGetCampaignInterviewerStateCountNotAttributed() throws Exception {
 
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X00/survey-units/not-attributed/state-count")
-				.accept(MediaType.APPLICATION_JSON)
-				.with(authentication(LOCAL_USER)))
+						.accept(MediaType.APPLICATION_JSON)
+						.with(authentication(LOCAL_USER)))
 				.andExpectAll(
 						status().isOk(),
 						jsonPath("$.nvmCount").value("0"),
@@ -210,9 +205,10 @@ class TestAuthKeyCloak {
 	@Order(1)
 	void testGetContactOutcomeCountNotattributed() throws Exception {
 		mockMvc.perform(get(
-				"https://localhost:8080/api/campaign/SIMPSONS2020X00/survey-units/not-attributed/contact-outcomes")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						"https://localhost:8080/api/campaign/SIMPSONS2020X00/survey-units/not-attributed/contact" +
+								"-outcomes")
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						jsonPath("$.inaCount").value("0"),
@@ -232,10 +228,6 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the GET endpoint "api/user"
 	 * return null
-	 * 
-	 * @throws InterruptedException
-	 * @throws NotFoundException
-	 * @throws JSONException
 	 */
 	@Test
 	@Order(2)
@@ -258,8 +250,8 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the GET endpoint "api/campaigns"
 	 * return 200
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(3)
@@ -267,8 +259,8 @@ class TestAuthKeyCloak {
 		String campaignJsonPath = "$.[?(@.id == 'SIMPSONS2020X00')].%s";
 
 		mockMvc.perform(get(Constants.API_CAMPAIGNS)
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						checkJsonPath(campaignJsonPath, "label", "Survey on the Simpsons tv show 2020"),
@@ -297,16 +289,16 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the GET endpoint "api/campaign/{id}/interviewers"
 	 * return 200
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(4)
 	void testGetCampaignInterviewer() throws Exception {
 		String interviewerJsonPath = "$.[?(@.id == 'INTW1')].%s";
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X00/interviewers")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						checkJsonPath(interviewerJsonPath, "interviewerFirstName", "Margie"),
@@ -317,23 +309,23 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the GET endpoint "api/campaign/{id}/interviewers"
 	 * return 404 when campaign Id is false
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(5)
 	void testGetCampaignInterviewerNotFound() throws Exception {
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X000000/interviewers")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
 	/**
 	 * Test that the GET endpoint "api/campaign/{id}/survey-units/state-count"
 	 * return 200
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(6)
@@ -341,8 +333,8 @@ class TestAuthKeyCloak {
 		String ouJsonPath = "$.organizationUnits.[?(@.idDem == 'OU-NORTH')].%s";
 
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X00/survey-units/state-count")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						checkJsonPath(ouJsonPath, "nvmCount", 0L),
@@ -372,27 +364,27 @@ class TestAuthKeyCloak {
 	void testPutClosingCauseNoPreviousClosingCause()
 			throws Exception {
 		mockMvc.perform(put("/api/survey-unit/11/closing-cause/NPI")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk());
 
 		List<ClosingCause> closingCauses = closingCauseRepository.findBySurveyUnitId("11");
-		assertEquals(ClosingCauseType.NPI, closingCauses.get(0).getType());
+		assertEquals(ClosingCauseType.NPI, closingCauses.getFirst().getType());
 
 	}
 
 	/**
 	 * Test that the GET endpoint "api/campaign/{id}/survey-units/state-count"
 	 * return 404 when campaign Id is false
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(7)
 	void testGetCampaignStateCountNotFound() throws Exception {
 		mockMvc.perform(get("/api/campaign/test/survey-units/state-count")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
@@ -400,12 +392,12 @@ class TestAuthKeyCloak {
 	@Order(8)
 	void testPutClosingCausePreviousClosingCause() throws Exception {
 		mockMvc.perform(put("/api/survey-unit/11/closing-cause/NPA")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk());
 
 		List<ClosingCause> closingCauses = closingCauseRepository.findBySurveyUnitId("11");
-		assertEquals(ClosingCauseType.NPA, closingCauses.get(0).getType());
+		assertEquals(ClosingCauseType.NPA, closingCauses.getFirst().getType());
 
 	}
 
@@ -415,19 +407,19 @@ class TestAuthKeyCloak {
 		String ouJsonPath = "$.organizationUnits.[?(@.idDem == 'OU-NORTH')].%s";
 
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X00/survey-units/state-count")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(status().isOk(),
 						checkJsonPath(ouJsonPath, "tbrCount", 4L),
 						checkJsonPath(ouJsonPath, "rowCount", 0L));
 
 		mockMvc.perform(put("/api/survey-unit/14/close/ROW")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk());
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X00/survey-units/state-count")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(status().isOk(),
 						checkJsonPath(ouJsonPath, "tbrCount", 3L),
 						checkJsonPath(ouJsonPath, "rowCount", 1L));
@@ -437,15 +429,15 @@ class TestAuthKeyCloak {
 	 * Test that the GET endpoint
 	 * "api/campaign/{id}/survey-units/interviewer/{id}/state-count"
 	 * return 200
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(8)
 	void testGetCampaignInterviewerStateCount() throws Exception {
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X00/survey-units/interviewer/INTW1/state-count")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(status().isOk(),
 						jsonPath("$.nvmCount").value(0L),
 						jsonPath("$.nnsCount").value(0L),
@@ -472,15 +464,15 @@ class TestAuthKeyCloak {
 	 * Test that the GET endpoint
 	 * "api/campaign/{id}/survey-units/interviewer/{id}/state-count"
 	 * return 404 when campaign Id is false
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(9)
 	void testGetCampaignInterviewerStateCountNotFoundCampaign() throws Exception {
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X000000/survey-units/interviewer/INTW1/state-count")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
@@ -488,16 +480,16 @@ class TestAuthKeyCloak {
 	 * Test that the GET endpoint
 	 * "api/campaign/{id}/survey-units/interviewer/{id}/state-count"
 	 * return 404 when interviewer Id is false
-	 * 
-	 * @throws InterruptedException
-	 * @throws JSONException
+	 *
+	 * @throws InterruptedException ie
+	 * @throws JSONException        jsone
 	 */
 	@Test
 	@Order(10)
 	void testGetCampaignInterviewerStateCountNotFoundIntw() throws Exception {
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X00/survey-units/interviewer/test/state-count")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
@@ -508,31 +500,31 @@ class TestAuthKeyCloak {
 	 * Test that the GET endpoint "api/survey-unit/{id}"
 	 * return 404 when survey-unit is false
 	 *
-	 * @throws InterruptedException
-	 * @throws JSONException
+	 * @throws InterruptedException ie
+	 * @throws JSONException        jsone
 	 */
 	@Test
 	@Order(13)
 	void testGetSurveyUnitInterviewerDetailNotFound() throws Exception {
 		mockMvc.perform(get("/api/interviewer/survey-unit/123456789")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
 	/**
 	 * Test that the PUT endpoint "api/survey-unit/{id}/state/{state}"
 	 * return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(15)
 	@Sql(value = ScriptConstants.REINIT_SQL_SCRIPT, executionPhase = AFTER_TEST_METHOD)
 	void testPutSurveyUnitState() throws Exception {
 		mockMvc.perform(put("/api/survey-unit/12/state/WFT")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk());
 
 		assertSame(StateType.WFT, stateRepository.findFirstDtoBySurveyUnitIdOrderByDateDesc("12").getType());
@@ -541,72 +533,72 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the PUT endpoint "api/survey-unit/{id}"
 	 * return 400 with unknown state
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(16)
 	void testPutSurveyUnitStateStateFalse() throws Exception {
 		mockMvc.perform(put("/api/survey-unit/11/state/test")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isInternalServerError());
 	}
 
 	/**
 	 * Test that the PUT endpoint "api/survey-unit/{id}"
 	 * return 403 when not allowed to pass to this state
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(17)
 	void testPutSurveyUnitStateNoSu() throws Exception {
 		mockMvc.perform(put("/api/survey-unit/11/state/AOC")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isForbidden());
 	}
 
 	/**
 	 * Test that the PUT endpoint "api/preferences"
 	 * return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(18)
 	void testPutPreferences() throws Exception {
 		mockMvc.perform(put("/api/preferences")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of("SIMPSONS2020X00")))
-				.contentType(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of("SIMPSONS2020X00")))
+						.contentType(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk());
 	}
 
 	/**
 	 * Test that the PUT endpoint "api/preferences"
 	 * return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(19)
 	void testPutPreferencesWrongCampaignId() throws Exception {
 		mockMvc.perform(put("/api/preferences")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of("")))
-				.contentType(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of("")))
+						.contentType(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
 	/**
 	 * Test that the GET endpoint
 	 * "/campaign/{id}/survey-units/interviewer/{idep}/closing-causes" returns 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(19)
@@ -614,8 +606,8 @@ class TestAuthKeyCloak {
 		// use a beforeEach method to run each test with a cleaned database
 
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X00/survey-units/interviewer/INTW1/closing-causes")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(status().isOk(),
 						jsonPath("$.npaCount").value("0"),
 						jsonPath("$.npiCount").value("1"),
@@ -626,15 +618,15 @@ class TestAuthKeyCloak {
 
 	/**
 	 * Test that the GET endpoint "api/campaign/{id}/survey-units/abandoned"
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(20)
 	void testGetNbSuAbandoned() throws Exception {
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X00/survey-units/abandoned")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(status().isOk(),
 						jsonPath("$.count").value("0"));
 	}
@@ -642,8 +634,8 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the Get endpoint
 	 * "/campaign/{id}/survey-units/contact-outcomes[?date={date}]" return 200
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(20)
@@ -651,8 +643,8 @@ class TestAuthKeyCloak {
 		String ouJsonPath = "$.organizationUnits.[?(@.idDem == 'OU-NORTH')].%s";
 
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X00/survey-units/contact-outcomes")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(status().isOk(),
 						checkJsonPath(ouJsonPath, "labelDem", "North region organizational unit"),
 						checkJsonPath(ouJsonPath, "inaCount", 0L),
@@ -671,8 +663,8 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the Get endpoint
 	 * "/campaign/survey-units/contact-outcomes[?date={date}]" return 200
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(20)
@@ -680,8 +672,8 @@ class TestAuthKeyCloak {
 		String ouJsonPath = "$.[?(@.campaign.id == 'SIMPSONS2020X00')].%s";
 
 		mockMvc.perform(get("/api/campaigns/survey-units/contact-outcomes")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(status().isOk(),
 						checkJsonPath(ouJsonPath, "campaign.label", "Survey on the Simpsons tv show 2020"),
 						checkJsonPath(ouJsonPath, "inaCount", 0L),
@@ -700,52 +692,52 @@ class TestAuthKeyCloak {
 
 	/**
 	 * Test that the GET endpoint "api/campaign/{id}/survey-units/abandoned"
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(21)
 	void testGetNbSuAbandonedNotFound() throws Exception {
 		mockMvc.perform(get("/api/campaign/test/survey-units/abandoned")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
 	/**
 	 * Test that the GET endpoint "api/campaign/{id}/survey-units/not-attributed"
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(22)
 	void testGetNbSuNotAttributed() throws Exception {
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X00/survey-units/not-attributed")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(status().isOk(),
 						jsonPath("$.count").value("0"));
 	}
 
 	/**
 	 * Test that the GET endpoint "api/campaign/{id}/survey-units/not-attributed"
-	 * 
-	 * @throws InterruptedException
-	 * @throws JSONException
+	 *
+	 * @throws InterruptedException ie
+	 * @throws JSONException        jsone
 	 */
 	@Test
 	@Order(23)
 	void testGetNbSuNotAttributedNotFound() throws Exception {
 		mockMvc.perform(get("/api/campaign/test/survey-units/not-attributed")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
 	/**
 	 * Test that the POST endpoint "api/message" return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(34)
@@ -755,44 +747,44 @@ class TestAuthKeyCloak {
 		message.setSender("abc");
 
 		mockMvc.perform(post("/api/message")
-				.with(authentication(LOCAL_USER))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(message)))
+						.with(authentication(LOCAL_USER))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(message)))
 				.andExpect(status().isOk());
 
 		List<MessageDto> messages = messageRepository
 				.findMessagesDtoByIds(messageRepository.getMessageIdsByInterviewer("INTW1"));
-		assertEquals("TEST", messages.get(0).getText());
+		assertEquals("TEST", messages.getFirst().getText());
 
 	}
 
 	/**
 	 * Test that the POST endpoint "api/message" return 400 when bad format
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(35)
 	void testPostMessageBadFormat() throws Exception {
 		mockMvc.perform(post("/api/message")
-				.with(authentication(LOCAL_USER))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(null)))
+						.with(authentication(LOCAL_USER))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(null)))
 				.andExpect(status().isBadRequest());
 	}
 
 	/**
 	 * Test that the GET endpoint
 	 * "api/messages/{id}" return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(36)
 	void testGetMessage() throws Exception {
 		mockMvc.perform(get("/api/messages/INTW1")
-				.with(authentication(INTERVIEWER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(INTERVIEWER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						jsonPath("$[?(@.text == 'TEST')]").exists());
@@ -802,15 +794,15 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the GET endpoint
 	 * "api/messages/{id}" return empty body with a wrong id
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(37)
 	void testGetMessageWrongId() throws Exception {
 		mockMvc.perform(get("/api/messages/123456789")
-				.with(authentication(INTERVIEWER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(INTERVIEWER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						jsonPath("$.length()").value(0));
@@ -819,16 +811,16 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the put endpoint "api/message/{id}/interviewer/{idep}/read"
 	 * return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(38)
 	void testPutMessageAsRead() throws Exception {
-		Long messageId = messageRepository.getMessageIdsByInterviewer("INTW1").get(0);
+		Long messageId = messageRepository.getMessageIdsByInterviewer("INTW1").getFirst();
 		mockMvc.perform(put("/api/message/" + messageId + "/interviewer/INTW1/read")
-				.with(authentication(INTERVIEWER))
-				.contentType(MediaType.APPLICATION_JSON))
+						.with(authentication(INTERVIEWER))
+						.contentType(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk());
 
 	}
@@ -836,40 +828,40 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the put endpoint "api/message/{id}/interviewer/{idep}/delete"
 	 * return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(39)
 	void testPutMessageAsDelete() throws Exception {
-		Long messageId = messageRepository.getMessageIdsByInterviewer("INTW1").get(0);
+		Long messageId = messageRepository.getMessageIdsByInterviewer("INTW1").getFirst();
 
 		String url = String.format("/api/message/%d/interviewer/INTW1/delete", messageId);
 
 		mockMvc.perform(put(url)
-				.with(authentication(LOCAL_USER))
-				.contentType(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.contentType(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk());
 
 		Optional<Message> message = messageRepository.findById(messageId);
-		assertEquals(MessageStatusType.DEL, message.get().getMessageStatus().get(0).getStatus());
+		assertEquals(MessageStatusType.DEL, message.get().getMessageStatus().getFirst().getStatus());
 	}
 
 	/**
 	 * Test that the PUT endpoint
 	 * "/message/{id}/interviewer/{idep}/read" return 404 with a wrong Id
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(40)
 	void testPutMessageAsReadWrongId() throws Exception {
-		Long messageId = messageRepository.getMessageIdsByInterviewer("INTW1").get(0);
+		Long messageId = messageRepository.getMessageIdsByInterviewer("INTW1").getFirst();
 		String url = String.format("/api/message/%d/interviewer/Test/read", messageId);
 
 		mockMvc.perform(put(url)
-				.with(authentication(LOCAL_USER))
-				.contentType(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.contentType(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 
 	}
@@ -877,15 +869,15 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the GET endpoint
 	 * "/message-history" return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(41)
 	void testGetMessageHistory() throws Exception {
 		mockMvc.perform(get("/api/message-history")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(status().isOk(),
 						jsonPath("$[?(@.text == 'TEST')]").exists());
 
@@ -894,8 +886,8 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the POST endpoint
 	 * "/verify-name" return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(42)
@@ -903,9 +895,9 @@ class TestAuthKeyCloak {
 		WsText message = new WsText("simps");
 
 		mockMvc.perform(post("/api/verify-name")
-				.with(authentication(LOCAL_USER))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(message)))
+						.with(authentication(LOCAL_USER))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(message)))
 				.andExpectAll(status().isOk(),
 						jsonPath("$[?(@.id == 'SIMPSONS2020X00')]").exists());
 
@@ -913,17 +905,17 @@ class TestAuthKeyCloak {
 
 	/**
 	 * Test that the POST endpoint "api/message" return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(43)
 	void testPostMessageSysteme() throws Exception {
 		MessageDto message = new MessageDto("Synchronisation", List.of("SIMPSONS2020X00"));
 		mockMvc.perform(post("/api/message")
-				.with(authentication(INTERVIEWER))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(message)))
+						.with(authentication(INTERVIEWER))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(message)))
 				.andExpectAll(status().isOk());
 		List<MessageDto> messages = messageRepository
 				.findMessagesDtoByIds(messageRepository.getMessageIdsByInterviewer("INTW1"));
@@ -933,8 +925,8 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the Get endpoint
 	 * "/interviewers" return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(44)
@@ -942,8 +934,8 @@ class TestAuthKeyCloak {
 		String interviewerJsonPath = "$.[?(@.id == 'INTW1')].%s";
 
 		mockMvc.perform(get("/api/interviewers")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						jsonPath("$.[?(@.id == 'INTW1')]").exists(),
@@ -954,19 +946,20 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the Get endpoint
 	 * "/interviewer/{id}/campaigns" return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(45)
 	void testGetInterviewerRelatedCampaigns() throws Exception {
 		mockMvc.perform(get("/api/interviewer/INTW1/campaigns")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						jsonPath("$.[?(@.id == 'SIMPSONS2020X00')]").exists(),
-						jsonPath("$.[?(@.id == 'SIMPSONS2020X00')].label").value("Survey on the Simpsons tv show 2020"),
+						jsonPath("$.[?(@.id == 'SIMPSONS2020X00')].label").value("Survey on the Simpsons tv show " +
+								"2020"),
 						expectValidManagementStartDate(),
 						expectValidEndDate());
 	}
@@ -975,23 +968,23 @@ class TestAuthKeyCloak {
 	 * Test that the Get endpoint
 	 * "/interviewer/{id}/campaigns" return 404
 	 * when interviewer not exist
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(46)
 	void testGetInterviewerNotExistForCampaign() throws Exception {
 		mockMvc.perform(get("/api/interviewer/INTW123/campaigns")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
 	/**
 	 * Test that the Get endpoint
 	 * "/survey-units/closable" return 200
-	 * 
-	 * @throws Exception
+	 *
+	 * @throws Exception e
 	 */
 	@Test
 	@Order(47)
@@ -1008,13 +1001,14 @@ class TestAuthKeyCloak {
 				""";
 
 		mockServer.expect(ExpectedCount.once(),
-				requestTo(containsString(Constants.API_QUEEN_SURVEYUNITS_STATEDATA)))
+						requestTo(containsString(Constants.API_QUEEN_SURVEYUNITS_STATEDATA)))
 				.andExpect(method(HttpMethod.POST))
 				.andRespond(withStatus(HttpStatus.OK)
 						.contentType(MediaType.APPLICATION_JSON)
 						.body(expectedBody));
 
-		Optional<VisibilityDB> visiOpt = visibilityRepository.findVisibilityByCampaignIdAndOuId("VQS2021X00", "OU-NORTH");
+		Optional<VisibilityDB> visiOpt = visibilityRepository.findVisibilityByCampaignIdAndOuId("VQS2021X00", "OU" +
+				"-NORTH");
 		if (visiOpt.isEmpty()) {
 			fail("No visibility found for VQS2021X00  and OU-NORTH");
 		}
@@ -1050,16 +1044,16 @@ class TestAuthKeyCloak {
 	 * Test that the Get endpoint
 	 * "/campaign/{id}/survey-units/interviewer/{id}/contact-outcomes[?date={date}]"
 	 * return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(48)
 	void testGetContactOutcomeCountByCampaignAndInterviewer()
 			throws Exception {
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X00/survey-units/interviewer/INTW1/contact-outcomes")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						jsonPath("$.inaCount").value(0L),
@@ -1079,16 +1073,16 @@ class TestAuthKeyCloak {
 	 * Test that the Get endpoint
 	 * "/campaign/{id}/survey-units/interviewer/{id}/contact-outcomes[?date={date}]"
 	 * return 404
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(49)
 	void testGetContactOutcomeCountByCampaignNotExistAndInterviewer()
 			throws Exception {
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X000000/survey-units/interviewer/INTW1/contact-outcomes")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isNotFound());
 
@@ -1098,16 +1092,16 @@ class TestAuthKeyCloak {
 	 * Test that the Get endpoint
 	 * "/campaign/{id}/survey-units/interviewer/{id}/contact-outcomes[?date={date}]"
 	 * return 404
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(50)
 	void testGetContactOutcomeCountByCampaignAndInterviewerNotExist()
 			throws Exception {
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X000000/survey-units/interviewer/INTW123/contact-outcomes")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isNotFound());
 
@@ -1116,8 +1110,8 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the Get endpoint
 	 * "/campaign/{id}/survey-units/contact-outcomes[?date={date}]" return 404
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(52)
@@ -1125,8 +1119,8 @@ class TestAuthKeyCloak {
 			throws Exception {
 
 		mockMvc.perform(get("/api/campaign/SIMPSONS2020X000000/survey-units/contact-outcomes")
-				.with(authentication(LOCAL_USER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isNotFound());
 	}
@@ -1134,8 +1128,8 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the Put endpoint
 	 * "/survey-unit/{id}/comment" return 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(54)
@@ -1143,14 +1137,14 @@ class TestAuthKeyCloak {
 		String comment = asJsonString(new CommentDto(CommentType.MANAGEMENT, "Test of comment"));
 
 		mockMvc.perform(put("/api/survey-unit/11/comment")
-				.with(authentication(LOCAL_USER))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(comment))
+						.with(authentication(LOCAL_USER))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(comment))
 				.andExpect(status().isOk());
 
 		mockMvc.perform(get("/api/interviewer/survey-unit/11")
-				.with(authentication(INTERVIEWER))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(INTERVIEWER))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						jsonPath("$.comments[0].type").value(equalTo(CommentType.MANAGEMENT.toString())),
@@ -1162,8 +1156,8 @@ class TestAuthKeyCloak {
 	 * Test that the Put endpoint
 	 * "/survey-unit/{id}/comment" return 404
 	 * when id not exist
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(55)
@@ -1171,9 +1165,9 @@ class TestAuthKeyCloak {
 		String comment = asJsonString(new CommentDto(CommentType.MANAGEMENT, "Test of comment"));
 
 		mockMvc.perform(put("/api/survey-unit/11111111111/comment")
-				.with(authentication(LOCAL_USER))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(comment))
+						.with(authentication(LOCAL_USER))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(comment))
 				.andExpect(status().isNotFound());
 
 	}
@@ -1181,15 +1175,15 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the Put endpoint
 	 * "/survey-unit/{id}/viewed" return 200 and viewed attribut set to true
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(56)
 	void testPutSuViewed() throws Exception {
 		mockMvc.perform(put("/api/survey-unit/24/viewed")
-				.with(authentication(LOCAL_USER))
-				.contentType(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.contentType(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk());
 
 		assertEquals(true, surveyUnitRepository.findById("24").get().getViewed());
@@ -1200,31 +1194,31 @@ class TestAuthKeyCloak {
 	 * Test that the Put endpoint
 	 * "/survey-unit/{id}/viewed" return 404
 	 * when id not exist
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(57)
 	void testPutSuViewedNotExist() throws Exception {
 		mockMvc.perform(put("/api/survey-unit/11111111111/viewed")
-				.with(authentication(LOCAL_USER))
-				.contentType(MediaType.APPLICATION_JSON))
+						.with(authentication(LOCAL_USER))
+						.contentType(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
 	/**
 	 * Test that the GET endpoint "api/campaigns"
 	 * return 200
-	 * 
-	 * @throws InterruptedException
-	 * @throws JSONException
+	 *
+	 * @throws InterruptedException ie
+	 * @throws JSONException        jsone
 	 */
 	@Test
 	@Order(58)
 	void testGetOrganizationUnits() throws Exception {
 		mockMvc.perform(get("/api/organization-units")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						jsonPath("$[?(@.id == 'OU-NORTH')].label").value("North region organizational unit"),
@@ -1236,8 +1230,8 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the Post endpoint
 	 * "/organization-unit/context" returns 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(103)
@@ -1257,9 +1251,9 @@ class TestAuthKeyCloak {
 		ou2.setUsers(List.of(user3, user4));
 
 		mockMvc.perform(post("/api/organization-units")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(ou1, ou2))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(ou1, ou2))))
 				.andExpect(status().isOk());
 
 		Optional<OrganizationUnit> ou1Opt = organizationUnitRepository.findById("OU-NORTH2");
@@ -1297,8 +1291,8 @@ class TestAuthKeyCloak {
 	 * Test that the Post endpoint
 	 * "/organization-unit/context" returns 400
 	 * when there is a duplicate user
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(104)
@@ -1315,9 +1309,9 @@ class TestAuthKeyCloak {
 				OrganizationUnitType.LOCAL, List.of(user2, user3));
 
 		mockMvc.perform(post("/api/organization-units")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(ou1, ou2))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(ou1, ou2))))
 				.andExpect(status().isBadRequest());
 
 		// No OU should have been added
@@ -1332,8 +1326,8 @@ class TestAuthKeyCloak {
 	 * Test that the Post endpoint
 	 * "/organization-unit/context" returns 400
 	 * when a child organization unit does not exist
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(105)
@@ -1350,9 +1344,9 @@ class TestAuthKeyCloak {
 				OrganizationUnitType.LOCAL, List.of(user2, user3));
 
 		mockMvc.perform(post("/api/organization-units")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(ou1, ou2))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(ou1, ou2))))
 				.andExpect(status().isBadRequest());
 
 		// No OU should have been added
@@ -1366,8 +1360,8 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the Post endpoint
 	 * "api/interviewers" returns 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(106)
@@ -1376,9 +1370,9 @@ class TestAuthKeyCloak {
 		InterviewerContextDto interv2 = generateInterviewerBContextDto("INTERV2");
 
 		mockMvc.perform(post("/api/interviewers")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(interv1, interv2))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(interv1, interv2))))
 				.andExpect(status().isOk());
 
 		// Interviewers should have been added
@@ -1405,8 +1399,8 @@ class TestAuthKeyCloak {
 	 * Test that the Post endpoint
 	 * "api/interviewers" returns 400
 	 * when an email is missing
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(107)
@@ -1416,9 +1410,9 @@ class TestAuthKeyCloak {
 		interv2.setEmail(null);
 
 		mockMvc.perform(post("/api/interviewers")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(interv1, interv2))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(interv1, interv2))))
 				.andExpect(status().isBadRequest());
 
 		// Interviewers should not have been added
@@ -1432,8 +1426,8 @@ class TestAuthKeyCloak {
 	 * Test that the Post endpoint
 	 * "api/interviewers" returns 400
 	 * when an iterviewer id is present twice
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(108)
@@ -1442,9 +1436,9 @@ class TestAuthKeyCloak {
 		InterviewerContextDto interv2 = generateInterviewerBContextDto("INTERV3");
 
 		mockMvc.perform(post("/api/interviewers")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(interv1, interv2))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(interv1, interv2))))
 				.andExpect(status().isBadRequest());
 
 		// Interviewers should not have been added
@@ -1457,8 +1451,8 @@ class TestAuthKeyCloak {
 	 * Test that the Post endpoint
 	 * "api/interviewers" returns 200
 	 * and provide default title MISTER if no title provided
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(109)
@@ -1467,9 +1461,9 @@ class TestAuthKeyCloak {
 		intervNoTitle.setTitle(null);
 
 		mockMvc.perform(post("/api/interviewers")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(intervNoTitle))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(intervNoTitle))))
 				.andExpect(status().isOk());
 
 		// Interviewers should have been added
@@ -1482,18 +1476,18 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the POST endpoint
 	 * "/survey-units returns 200
-	 * 
-	 * @throws JsonProcessingException
-	 * @throws JSONException
-	 * @throws InterruptedException
+	 *
+	 * @throws JsonProcessingException jpe
+	 * @throws JSONException           json exception
+	 * @throws InterruptedException    ie
 	 */
 	@Test
 	@Order(111)
 	void testPostSurveyUnits() throws Exception {
-		mockMvc.perform(post("/api/survey-units")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(generateSurveyUnit("8")))))
+		mockMvc.perform(post(Constants.API_SURVEYUNITS)
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(generateSurveyUnit("8")))))
 				.andExpect(status().isOk());
 
 		assertTrue(surveyUnitRepository.findById("8").isPresent());
@@ -1502,28 +1496,28 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the POST endpoint
 	 * "/survey-units returns 400 when id dupliate in DB
-	 * 
-	 * @throws JsonProcessingException
-	 * @throws JSONException
-	 * @throws InterruptedException
+	 *
+	 * @throws JsonProcessingException jpe
+	 * @throws JSONException           jsone
+	 * @throws InterruptedException    ie
 	 */
 	@Test
 	@Order(112)
 	void testPostSurveyUnitsDuplicateInDB() throws Exception {
 		mockMvc.perform(post("/api/survey-units")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(generateSurveyUnit("8")))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(generateSurveyUnit("8")))))
 				.andExpect(status().isBadRequest());
 	}
 
 	/**
 	 * Test that the POST endpoint
 	 * "/survey-units returns 400 when id dupliate in body
-	 * 
-	 * @throws JsonProcessingException
-	 * @throws JSONException
-	 * @throws InterruptedException
+	 *
+	 * @throws JsonProcessingException jpe
+	 * @throws JSONException           jsone
+	 * @throws InterruptedException    ie
 	 */
 	@Test
 	@Order(113)
@@ -1531,19 +1525,19 @@ class TestAuthKeyCloak {
 		SurveyUnitContextDto su = generateSurveyUnit("9");
 
 		mockMvc.perform(post("/api/survey-units")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(su, su))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(su, su))))
 				.andExpect(status().isBadRequest());
 	}
 
 	/**
 	 * Test that the POST endpoint
 	 * "/survey-units returns 400 when OrganizationUnitId does not exist
-	 * 
-	 * @throws JsonProcessingException
-	 * @throws JSONException
-	 * @throws InterruptedException
+	 *
+	 * @throws JsonProcessingException jpe
+	 * @throws JSONException           jsone
+	 * @throws InterruptedException    ie
 	 */
 	@Test
 	@Order(114)
@@ -1553,19 +1547,19 @@ class TestAuthKeyCloak {
 		su.setOrganizationUnitId("OU-TEST");
 
 		mockMvc.perform(post("/api/survey-units")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(su))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(su))))
 				.andExpect(status().isBadRequest());
 	}
 
 	/**
 	 * Test that the POST endpoint
 	 * "/survey-units returns 400 when campaignId does not exist
-	 * 
-	 * @throws JsonProcessingException
-	 * @throws JSONException
-	 * @throws InterruptedException
+	 *
+	 * @throws JsonProcessingException jpe
+	 * @throws JSONException           jsone
+	 * @throws InterruptedException    ie
 	 */
 	@Test
 	@Order(115)
@@ -1574,9 +1568,9 @@ class TestAuthKeyCloak {
 		su.setCampaign("campaignTest");
 
 		mockMvc.perform(post("/api/survey-units")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(su))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(su))))
 				.andExpect(status().isBadRequest());
 
 	}
@@ -1584,10 +1578,10 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the POST endpoint
 	 * "/survey-units returns 400 when surveyUnit body is not valid
-	 * 
-	 * @throws JsonProcessingException
-	 * @throws JSONException
-	 * @throws InterruptedException
+	 *
+	 * @throws JsonProcessingException jpe
+	 * @throws JSONException           jsone
+	 * @throws InterruptedException    ie
 	 */
 	@Test
 	@Order(117)
@@ -1596,35 +1590,35 @@ class TestAuthKeyCloak {
 
 		// ID null
 		mockMvc.perform(post("/api/survey-units")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(su))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(su))))
 				.andExpect(status().isBadRequest());
 
 		// Campaign null
 		su.setId("9");
 		su.setCampaign("");
 		mockMvc.perform(post("/api/survey-units")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(su))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(su))))
 				.andExpect(status().isBadRequest());
 
 		// Persons Null
 		su.setPersons(Collections.emptyList());
 		su.setCampaign("SIMPSONS2020X00");
 		mockMvc.perform(post("/api/survey-units")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(su))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(su))))
 				.andExpect(status().isBadRequest());
 	}
 
 	/**
 	 * Test that the Post endpoint
 	 * "/survey-units/interviewers" returns 200
-	 * 
-	 * @throws InterruptedException
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(118)
@@ -1639,9 +1633,9 @@ class TestAuthKeyCloak {
 		SurveyUnitInterviewerLinkDto assign2 = new SurveyUnitInterviewerLinkDto("102", "INTW3");
 
 		mockMvc.perform(post(Constants.API_SURVEYUNITS_INTERVIEWERS)
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(assign1, assign2))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(assign1, assign2))))
 				.andDo(print())
 				.andExpect(status().isOk());
 
@@ -1660,9 +1654,9 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the Post endpoint
 	 * "/survey-units/interviewers" returns 400
-	 * when an iterviewer is not present
-	 * 
-	 * @throws InterruptedException
+	 * when an interviewer is not present
+	 *
+	 * @throws InterruptedException ie
 	 */
 	@Test
 	@Order(119)
@@ -1675,9 +1669,9 @@ class TestAuthKeyCloak {
 		SurveyUnitInterviewerLinkDto assign2 = new SurveyUnitInterviewerLinkDto("104", "INTWDOESNTEXIST");
 
 		mockMvc.perform(post(Constants.API_SURVEYUNITS_INTERVIEWERS)
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(assign1, assign2))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(assign1, assign2))))
 				.andDo(print())
 				.andExpect(status().isBadRequest());
 
@@ -1696,20 +1690,20 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the Post endpoint
 	 * "/orgaization-unit/id/users" returns 200
-	 * 
-	 * @throws JSONException
-	 * @throws JsonProcessingException
-	 * @throws InterruptedException
+	 *
+	 * @throws JSONException           jsone
+	 * @throws JsonProcessingException jpe
+	 * @throws InterruptedException    ie
 	 */
 	@Test
 	@Order(120)
 	void testPostUsersByOU() throws Exception {
 		mockMvc.perform(post("/api/organization-unit/OU-NORTH/users")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(
-						new UserContextDto("TEST", "test", "test", null, null),
-						new UserContextDto("TEST2", "test2", "test2", null, null)))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(
+								new UserContextDto("TEST", "test", "test", null, null),
+								new UserContextDto("TEST2", "test2", "test2", null, null)))))
 				.andExpect(status().isOk());
 
 		// Ensure users have been added to the organization unit
@@ -1725,20 +1719,20 @@ class TestAuthKeyCloak {
 	/**
 	 * Test that the Post endpoint
 	 * "/orgaization-unit/id/users" returns 200
-	 * 
-	 * @throws JSONException
-	 * @throws JsonProcessingException
-	 * @throws InterruptedException
+	 *
+	 * @throws JSONException           jsone
+	 * @throws JsonProcessingException jpe
+	 * @throws InterruptedException    ie
 	 */
 	@Test
 	@Order(121)
 	void testPostUsersByOUThatDoesNotExist() throws Exception {
 		mockMvc.perform(post("/api/organization-unit/OU-TEST/users")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(List.of(
-						new UserContextDto("TEST", "test", "test", null, null),
-						new UserContextDto("TEST2", "test2", "test2", null, null)))))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(List.of(
+								new UserContextDto("TEST", "test", "test", null, null),
+								new UserContextDto("TEST2", "test2", "test2", null, null)))))
 				.andExpect(status().isBadRequest());
 
 		// Verify the user organization unit
@@ -1755,8 +1749,8 @@ class TestAuthKeyCloak {
 	@Order(200)
 	void testDeleteSurveyUnit() throws Exception {
 		mockMvc.perform(delete("/api/survey-unit/11")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk());
 
 		assertTrue(surveyUnitRepository.findById("11").isEmpty());
@@ -1766,8 +1760,8 @@ class TestAuthKeyCloak {
 	@Order(201)
 	void testDeleteSurveyUnitNotExist() throws Exception {
 		mockMvc.perform(delete("/api/survey-unit/toto")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
@@ -1776,25 +1770,25 @@ class TestAuthKeyCloak {
 	@Sql(value = ScriptConstants.REINIT_SQL_SCRIPT, executionPhase = AFTER_TEST_METHOD)
 	void testDeleteCampaign() throws Exception {
 		mockMvc.perform(delete("/api/campaign/XCLOSEDX00")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk());
 
 		assertTrue(campaignRepository.findById("XCLOSEDX00").isEmpty());
 
 		mockMvc.perform(delete("/api/campaign/SIMPSONS2020X00")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isConflict());
 
 		mockMvc.perform(delete("/api/campaign/SIMPSONS2020X00?force=false")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isConflict());
 
 		mockMvc.perform(delete("/api/campaign/SIMPSONS2020X00?force=true")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk());
 
 		assertTrue(campaignRepository.findById("SIMPSONS2020X00").isEmpty());
@@ -1804,8 +1798,8 @@ class TestAuthKeyCloak {
 	@Order(203)
 	void testDeleteCampaignNotExist() throws Exception {
 		mockMvc.perform(delete("/api/campaign/SIMPSONS2020XTT")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
@@ -1813,8 +1807,8 @@ class TestAuthKeyCloak {
 	@Order(204)
 	void testDeleteUser() throws Exception {
 		mockMvc.perform(delete("/api/user/JKL")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk());
 
 		assertTrue(userRepository.findById("JKL").isEmpty());
@@ -1824,8 +1818,8 @@ class TestAuthKeyCloak {
 	@Order(205)
 	void testDeleteUserNotExist() throws Exception {
 		mockMvc.perform(delete("/api/user/USER")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
@@ -1835,7 +1829,7 @@ class TestAuthKeyCloak {
 	void testDeleteOrganizationUnit() throws Exception {
 		// Delete all Survey Units before deleting Organization Unit
 		surveyUnitRepository.findByOrganizationUnitIdIn(List.of("OU-NORTH"))
-				.forEach(su -> surveyUnitRepository.delete(su));
+				.forEach(surveyUnitRepository::delete);
 
 		// Delete all Users before deleting Organization Unit
 		userRepository.findAllByOrganizationUnitId("OU-NORTH")
@@ -1846,8 +1840,8 @@ class TestAuthKeyCloak {
 				});
 
 		mockMvc.perform(delete("/api/organization-unit/OU-NORTH")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isOk());
 
 		assertTrue(organizationUnitRepository.findById("OU-NORTH").isEmpty());
@@ -1857,8 +1851,8 @@ class TestAuthKeyCloak {
 	@Order(207)
 	void testDeleteOrganizationUnitWithUsersOrSurveyUnits() throws Exception {
 		mockMvc.perform(delete("/api/organization-unit/OU-SOUTH")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isBadRequest());
 	}
 
@@ -1866,28 +1860,28 @@ class TestAuthKeyCloak {
 	@Order(208)
 	void testDeleteOrganizationUnitNotExist() throws Exception {
 		mockMvc.perform(delete("/api/organization-unit/TEST")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
 	@Test
 	@Order(209)
 	void testCreateValidUser() throws Exception {
-		mockMvc.perform(post("/api/user")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(generateValidUser())))
+		mockMvc.perform(post(Constants.API_USER)
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(generateValidUser())))
 				.andExpect(status().isCreated());
 	}
 
 	@Test
 	@Order(210)
 	void testCreateAreadyPresentUser() throws Exception {
-		mockMvc.perform(post("/api/user")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(generateValidUser())))
+		mockMvc.perform(post(Constants.API_USER)
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(generateValidUser())))
 				.andExpect(status().isConflict());
 	}
 
@@ -1895,47 +1889,47 @@ class TestAuthKeyCloak {
 	@Order(211)
 	void testCreateInvalidUser() throws Exception {
 		// Null user object
-		mockMvc.perform(post("/api/user")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(null)))
+		mockMvc.perform(post(Constants.API_USER)
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(null)))
 				.andDo(print())
 				.andExpect(status().isBadRequest());
 
 		// User with null first name
 		UserDto user = generateValidUser();
 		user.setFirstName(null);
-		mockMvc.perform(post("/api/user")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(user)))
+		mockMvc.perform(post(Constants.API_USER)
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(user)))
 				.andExpect(status().isBadRequest());
 
 		// User with null last name
 		user = generateValidUser();
 		user.setLastName(null);
-		mockMvc.perform(post("/api/user")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(user)))
+		mockMvc.perform(post(Constants.API_USER)
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(user)))
 				.andExpect(status().isBadRequest());
 
 		// User with null id
 		user = generateValidUser();
 		user.setId(null);
-		mockMvc.perform(post("/api/user")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(user)))
+		mockMvc.perform(post(Constants.API_USER)
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(user)))
 				.andExpect(status().isBadRequest());
 
 		// User with unknown organization unit
 		user = generateValidUser();
 		user.getOrganizationUnit().setId("WHERE_IS_CHARLIE");
-		mockMvc.perform(post("/api/user")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(user)))
+		mockMvc.perform(post(Constants.API_USER)
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(user)))
 				.andExpect(status().isBadRequest());
 	}
 
@@ -1943,9 +1937,9 @@ class TestAuthKeyCloak {
 	@Order(212)
 	void testUpdateMissingUser() throws Exception {
 		mockMvc.perform(put("/api/user/TEST")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(generateValidUser())))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(generateValidUser())))
 				.andExpect(status().isNotFound());
 	}
 
@@ -1953,9 +1947,9 @@ class TestAuthKeyCloak {
 	@Order(213)
 	void testUpdateWrongUser() throws Exception {
 		mockMvc.perform(put("/api/user/GHI")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(generateValidUser())))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(generateValidUser())))
 				.andExpect(status().isConflict());
 	}
 
@@ -1966,9 +1960,9 @@ class TestAuthKeyCloak {
 		user.setId("GHI");
 
 		mockMvc.perform(put("/api/user/GHI")
-				.with(authentication(ADMIN))
-				.contentType(MediaType.APPLICATION_JSON)
-				.content(asJsonString(user)))
+						.with(authentication(ADMIN))
+						.contentType(MediaType.APPLICATION_JSON)
+						.content(asJsonString(user)))
 				.andExpectAll(
 						status().isOk(),
 						jsonPath("$.id").value("GHI"),
@@ -1982,8 +1976,8 @@ class TestAuthKeyCloak {
 	@Order(215)
 	void testAssignUser() throws Exception {
 		mockMvc.perform(put("/api/user/GHI/organization-unit/OU-SOUTH")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						jsonPath("$.id").value("GHI"),
@@ -1995,8 +1989,8 @@ class TestAuthKeyCloak {
 	@Order(216)
 	void testAssignUserMissingUser() throws Exception {
 		mockMvc.perform(put("/api/user/MISSING/organization-unit/OU-SOUTH")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
@@ -2004,8 +1998,8 @@ class TestAuthKeyCloak {
 	@Order(217)
 	void testAssignUserMissingOu() throws Exception {
 		mockMvc.perform(put("/api/user/GHI/organization-unit/MISSING")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
@@ -2013,15 +2007,15 @@ class TestAuthKeyCloak {
 	@Order(218)
 	void testOngoing() throws Exception {
 		mockMvc.perform(get("/campaigns/ZCLOSEDX00/ongoing")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						jsonPath("$.ongoing").value(false));
 
 		mockMvc.perform(get("/campaigns/VQS2021X00/ongoing")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpectAll(
 						status().isOk(),
 						jsonPath("$.ongoing").value(true));
@@ -2031,8 +2025,8 @@ class TestAuthKeyCloak {
 	@Order(219)
 	void testOngoingNotFound() throws Exception {
 		mockMvc.perform(get("/campaigns/MISSING/ongoing")
-				.with(authentication(ADMIN))
-				.accept(MediaType.APPLICATION_JSON))
+						.with(authentication(ADMIN))
+						.accept(MediaType.APPLICATION_JSON))
 				.andExpect(status().isNotFound());
 	}
 
